Minor UI improvements in Market Page - fixed purchase button expanding over border - fixed dispaly of price board on smaller screens

--- a/Chicken-Traders/static/style.css
+++ b/Chicken-Traders/static/style.css
@@ -423,19 +423,21 @@ button:hover, .button:hover, .arrow:hover, button:focus, .button:focus {
 
 .price-board {
     display: grid;
-    grid-template: repeat(4, 20px) / repeat(2, 150px);
+    grid-template-columns: repeat(2, 140px);
     justify-content: center;
-    text-align: left;
-    background-color: rgba(255, 255, 255, .8);
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     margin: 10px auto;
-    padding: 10px 15px
+    padding: 5px 10px;
+    text-align: left;
+    box-sizing: border-box;
+    background-color: rgba(255, 255, 255, .9);
+    border-radius: 5px;
 }
 
 #market-banner {
     background: url("") no-repeat center bottom;
     background-size: contain;
-    width: 100%;
     height: 90px;
     padding-bottom: 20px;
 }
@@ -461,7 +463,7 @@ button:hover, .button:hover, .arrow:hover, button:focus, .button:focus {
     margin: auto;
     margin-bottom: 25px;
     display: grid;
-    grid-template: repeat(9, auto) / minmax(auto, calc(75px + 5vw)) repeat(5, auto);
+    grid-template: repeat(9, auto) / minmax(auto, calc(80px + 2vw)) repeat(5, auto);
     border: 8px solid rgba(30, 30, 30, .5);
     border-radius: 15px;
 }
@@ -474,7 +476,7 @@ button:hover, .button:hover, .arrow:hover, button:focus, .button:focus {
 
 .grid-container .shop>#itemUl {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(calc(125px + 10vw), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(calc(150px + 5vw), 1fr));
 }
 
 #itemUl {
@@ -562,6 +564,13 @@ button:hover, .button:hover, .arrow:hover, button:focus, .button:focus {
 
 .sellButton:hover {
     animation: none;
+}
+
+.buy-button {
+  width: 100%;
+  padding: 2px 10px;
+  border-radius: 5px;
+  box-sizing: border-box;
 }
 
 /* market player inv css */
